[package]
name = "process_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
